Apply suggestions from code review
Co-authored-by: Julian Risch <julian.risch@deepset.ai>

--- a/docs-website/docs/pipeline-components/generators/amazonbedrockchatgenerator.mdx
+++ b/docs-website/docs/pipeline-components/generators/amazonbedrockchatgenerator.mdx
@@ -82,7 +82,7 @@ Each request can contain up to four cache points.
 
 #### Caching messages
 
-This generator allows you control cache points at the `ChatMessage` level via the `meta` field.
+This generator allows you to control cache points at the `ChatMessage` level via the `meta` field.
 
 For example, to cache a long user message to be reused across multiple requests:
 ```python
