improvements + add to sidebar

--- a/docs-website/docs/concepts/pipelines.mdx
+++ b/docs-website/docs/concepts/pipelines.mdx
@@ -60,9 +60,11 @@ To connect components and integrations in a pipeline, you must know the names of
 ### Smart Pipeline Connections
 
 Pipelines support smarter connection semantics that simplify how components are wired together.
-Compatible outputs can be implicitly combined when connected to a single input.
 
-This behavior reduces the need for glue components like `Joiners`, keeping pipelines concise and easier to read.
+Compatible outputs can be implicitly combined when connected to a single input.
+Pipelines also perform implicit type adaptation at connection time for some selected types.
+
+These behaviors reduce the need for glue components like `Joiners` and and `OutputAdapters`, keeping pipelines concise and easier to read.
 
 See [Smart Pipeline Connections](pipelines/smart-connections.mdx) for details and examples.
 
