--- a/docs-website/docs/concepts/pipelines.mdx
+++ b/docs-website/docs/concepts/pipelines.mdx
@@ -64,7 +64,7 @@ Pipelines support smarter connection semantics that simplify how components are 
 Compatible outputs can be implicitly combined when connected to a single input.
 Pipelines also perform implicit type adaptation at connection time for some selected types.
 
-These behaviors reduce the need for glue components like `Joiners` and and `OutputAdapters`, keeping pipelines concise and easier to read.
+These behaviors reduce the need for glue components like `Joiners` and `OutputAdapters`, keeping pipelines concise and easier to read.
 
 See [Smart Pipeline Connections](pipelines/smart-pipeline-connections.mdx) for details and examples.
 
