--- a/docs-website/docs/concepts/pipelines/smart-pipeline-connections.mdx
+++ b/docs-website/docs/concepts/pipelines/smart-pipeline-connections.mdx
@@ -69,18 +69,17 @@ This pattern is especially useful when routing files, documents, or results acro
 To further streamline pipeline definitions, Haystack pipelines support limited implicit type adaptation at connection time.
 This makes pipeline connections more flexible and reduces the need for `OutputAdapter` components.
 
-Supported implicit adaptations include:
+Supported adaptations
 
-- `str` can connect to `ChatMessage`: the string is transformed into a `ChatMessage` with user role.
-- `ChatMessage` can connect to `str`: `ChatMessage.text` is extracted. In case it's None, an informative `PipelineRuntimeError`
-is raised.
-- `T` can connect to `list[T]`: the item of type T is wrapped into a list.
-- `list[str | ChatMessage]` can connect to `str` or `ChatMessage`. This covers several use case so it's worth supporting
-it. In case the list is empty, an informative `PipelineRuntimeError`
-is raised.
+| Source Type              | Target Type          | Behavior                                                      |
+|--------------------------|--------------------|---------------------------------------------------------------|
+| `str`                    | `ChatMessage`       | Wrapped into a `ChatMessage` with user role.                 |
+| `ChatMessage`            | `str`               | Extracts `ChatMessage.text`; raises `PipelineRuntimeError` if `None`. |
+| `T`                      | `list[T]`           | Wraps the item into a single-element list.                   |
+| `list[str | ChatMessage]`| `str` or `ChatMessage` | Extracts the first item; raises `PipelineRuntimeError` if the list is empty. |
 
-Valid adaptations are checked at connection time to ensure type safety.
-The adaptations themselves are only applied at run time when the pipeline executes.
+
+All adaptations are checked at connection time to ensure type safety, but applied at runtime during pipeline execution.
 
 ### Example
 
@@ -119,6 +118,7 @@ p.add_component("llm", OpenAIChatGenerator(model="gpt-4.1-mini"))
 p.add_component("retriever", InMemoryBM25Retriever(document_store=document_store, top_k=3))
 
 p.connect("prompt_builder", "llm")
+# implicitly converts list[ChatMessage] -> str
 p.connect("llm", "retriever")
 
 query = """Someday I'd love to visit Brisbane, but for now I just want
