--- a/docs-website/docs/concepts/pipelines/smart-pipeline-connections.mdx
+++ b/docs-website/docs/concepts/pipelines/smart-pipeline-connections.mdx
@@ -69,7 +69,7 @@ This pattern is especially useful when routing files, documents, or results acro
 To further streamline pipeline definitions, Haystack pipelines support limited implicit type adaptation at connection time.
 This makes pipeline connections more flexible and reduces the need for `OutputAdapter` components.
 
-Supported adaptations
+**Supported adaptations**
 
 | Source Type              | Target Type          | Behavior                                                      |
 |--------------------------|--------------------|---------------------------------------------------------------|
