Apply suggestions from code review

--- a/docs-website/docs/concepts/data-classes/chatmessage.mdx
+++ b/docs-website/docs/concepts/data-classes/chatmessage.mdx
@@ -11,7 +11,7 @@ description: "`ChatMessage` is the central abstraction to represent a message fo
 
 To create a `ChatMessage` instance, use `from_user`, `from_system`, `from_assistant`, and `from_tool` class methods.
 
-The [content](#types-of-content) of the `ChatMessage` can then be inspected using the `text`, `texts`, `image`, `images`, `files`, `file`, `tool_call`, `tool_calls`, `tool_call_result`, `tool_call_results`, `reasoning`, and `reasonings` properties.
+The [content](#types-of-content) of the `ChatMessage` can then be inspected using the `text`, `texts`, `image`, `images`, `file`, `files`, `tool_call`, `tool_calls`, `tool_call_result`, `tool_call_results`, `reasoning`, and `reasonings` properties.
 
 If you are looking for the details of this data class methods and parameters, head over to our [API documentation](/reference/data-classes-api#chatmessage).
 
