fix datta typo and base64_file/base64_data

--- a/docs-website/docs/concepts/data-classes/chatmessage.mdx
+++ b/docs-website/docs/concepts/data-classes/chatmessage.mdx
@@ -90,7 +90,7 @@ class FileContent:
     """
     The file content of a chat message.
 
-    :param base64_file: A base64 string representing the file.
+    :param base64_data: A base64 string representing the file.
     :param mime_type: The MIME type of the file (e.g. "application/pdf").
         Providing this value is recommended, as most LLM providers require it.
         If not provided, the MIME type is guessed from the base64 string, which can be slow and not always reliable.
@@ -228,7 +228,7 @@ print(user_message)
 >>>     _role=<ChatRole.USER: 'user'>,
 >>>     _content=[
 >>>         FileContent(
->>>             base64_datta='JVBERi0...',
+>>>             base64_data='JVBERi0...',
 >>>             mime_type='application/pdf',
 >>>             filename='2309.08632',
 >>>             extra={}
@@ -247,7 +247,7 @@ print(user_message.texts)
 
 print(user_message.file)
 >>> FileContent(
->>>     base64_datta='JVBERi0...',
+>>>     base64_data='JVBERi0...',
 >>>     mime_type='application/pdf',
 >>>     filename='2309.08632',
 >>>     extra={}
